--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Mi proyecto de codigo con GitHub</title>
 </head>
 
 <body>
     <h1>Mi proyecto de Kodigo con GitHub</h1>
-    
+
 </body>
 
 </html>
